<resources>
    <string name="app_name">Hwala Keyboread</string>
    <string name="bt_transfer_money">Transfer money</string>
    <string name="tv_enter_number">Or enter mobile number</string>
    <string name="bt_proceed">Proceed</string>
    <string name="tv_select">Select from my contacts list</string>
    <string name="tv_open">Open contacts list</string>
    <string name="tv_transfer_money">To </string>
    <string name="et_hint">Mobile number</string>
    <string name="space_tite_ar">AR</string>
    <string name="space_tite_en">EN</string>
    <string name="screen_4_transfer_money_from">From </string>
    <string name="screen_4_enter_amount">Enter amount</string>
    <string name="screen_4_change">Change</string>
    <string name="screen_4_hint_money"> Enter amount (Ex,1000)</string>
    <string name="screen_4_e_wallet">E-wallet</string>

    <string name="screen_5_header">We have sent an OTP to your number</string>
    <string name="screen_5_disc">In order to verify your e-wallet account, we have sent you an OTP to this number +</string>
    <string name="screen_5_resend">Resend</string>
    <string name="screen_5_make_transaction">Make transaction</string>

    <string name="screen_6_successful_transaction">Transaction made successfully</string>
    <string name="screen_6_successful_transaction_details">* EGP was sent to this number + successfully</string>
    <string name="screen_6_successful_transaction_ok">Ok</string>
    <string name="successful_transaction_message">I have sent you EGP 1,000 thr …</string>

</resources>