<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@color/ray"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:background="@color/positive" />
        <androidx.cardview.widget.CardView
            android:layout_alignParentBottom="true"
            style="@style/card_view_style_back"
            android:layout_margin="20dp"
            >
            <androidx.cardview.widget.CardView
                android:layout_alignParentBottom="true"
                style="@style/card_view_style"

                >
                <LinearLayout
                    style="@style/screen6_Linear_Layout_style_vertical"
                    android:gravity="center"

                    android:layout_gravity="center">
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="@dimen/iv_ImageView_m_top"
                        android:layout_marginBottom="@dimen/iv_ImageView_m_bottom"
                        android:src="@drawable/ic_icons_tick"></ImageView>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme"
                        android:textStyle="bold"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:textColor="@color/Black"
                        android:textSize="@dimen/tv_text_size"
                        android:text="@string/screen_6_successful_transaction"></TextView>
                    <TextView
                        android:id="@+id/tv_screen6_amount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme"
                        android:layout_marginBottom="20dp"
                        android:gravity="center"
                        android:text="@string/screen_6_successful_transaction_details"></TextView>
                    <Button
                        android:id="@+id/bt_next_screen"
                        style="@style/normal_button_style"
                        android:text="@string/screen_6_successful_transaction_ok"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
</LinearLayout>
