<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:paddingTop="@dimen/keyboread_padding_top"
    android:orientation="vertical">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/positive" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/ray"
        android:orientation="vertical">
      <include layout="@layout/back"></include>
        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_outer_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            card_view:cardBackgroundColor="@android:color/transparent"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="3dp" >

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_inner_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                card_view:cardBackgroundColor="@color/omega"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="0dp" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/omega"
                    android:padding="@dimen/lrg"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme"
                        android:layout_marginBottom="10dp"
                        android:text="@string/tv_transfer_money"></TextView>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_icons_profile"
                            android:background="@color/omega"
                            android:layout_gravity="center"
                            app:civ_border_color="@color/omega"
                            android:layout_marginEnd="10dp"
                            app:civ_border_width="2dp">
                        </de.hdodenhof.circleimageview.CircleImageView>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="center">
                            <TextView
                                android:id="@+id/secondLine"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="name"
                                />
                            <TextView
                                android:id="@+id/firstLine"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="Example application"
                                />
                        </LinearLayout>
                        <Button
                            android:id="@+id/bt_screen_4_change"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_margin="30dp"
                            android:textColor="@color/positive"
                            android:background=" #00555555"
                            android:text="@string/screen_4_change"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_outer_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            card_view:cardBackgroundColor="@android:color/transparent"
            card_view:cardCornerRadius="10dp"
            card_view:cardElevation="3dp" >

            <androidx.cardview.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_inner_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="3dp"
                card_view:cardBackgroundColor="@color/omega"
                card_view:cardCornerRadius="10dp"
                card_view:cardElevation="0dp" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/omega"
                    android:padding="@dimen/lrg"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/AppTheme"
                        android:layout_marginBottom="10dp"
                        android:text="@string/screen_4_transfer_money_from"></TextView>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_icons_wallet"
                            android:background="@color/omega"
                            android:layout_gravity="center"
                            app:civ_border_color="@color/omega"
                            android:layout_marginEnd="10dp"
                            app:civ_border_width="2dp">
                        </de.hdodenhof.circleimageview.CircleImageView>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_gravity="center">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/screen_4_e_wallet"
                                />
                            <TextView
                                android:id="@+id/tv_screen_4_e_wallet_number"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="+20**********1234"
                                />
                        </LinearLayout>
<!--                        <Button-->
<!--                            android:id="@+id/bt_screen_4_change_wallet"-->
<!--                            android:layout_width="match_parent"-->
<!--                            android:layout_height="50dp"-->
<!--                            android:layout_margin="30dp"-->
<!--                            android:textColor="@color/positive"-->
<!--                            android:background=" #00555555"-->
<!--                            android:text="@string/screen_4_change"/>-->
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginRight="7dp"
            android:layout_marginLeft="7dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme"
                android:text="@string/screen_4_enter_amount"
                android:layout_marginBottom="2dp"
                />
            <EditText
                android:id="@+id/et_screen_4_money_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/screen_4_hint_money"
                />
        </LinearLayout>
        <Button
            android:id="@+id/bt_next_screen"
            style="@style/next_button_style"
            android:text="@string/bt_proceed"/>

    </LinearLayout>


    <com.example.hwalasdk.HwalaKeyboard
        android:id="@+id/keyboard_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_alignParentBottom="true"
        android:keyPreviewLayout="@layout/key_preview"
        ></com.example.hwalasdk.HwalaKeyboard>
</LinearLayout>
