<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@color/ray"
        android:orientation="vertical">
        <include layout="@layout/back"></include>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_outer_contact"
            style="@style/card_view_style_back">
            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_inner_contact"
                style="@style/card_view_style">
                    <LinearLayout
                        style="@style/Linear_Layout_style_horizontal"
                        android:layout_gravity="center"
                        >
                        <de.hdodenhof.circleimageview.CircleImageView
                            android:layout_width="wrap_content"
                            android:id="@+id/img_contact"
                            android:src="@drawable/ic_contacts"
                            style="@style/circle_image_view_style_">
                        </de.hdodenhof.circleimageview.CircleImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:id="@+id/tv_contact"
                            android:text="@string/tv_select"
                            style="@style/text_view_style"></TextView>
                    </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>
        </LinearLayout>

<!--        <androidx.cardview.widget.CardView-->
<!--            style="@style/card_view_style_back" >-->
<!--            <androidx.cardview.widget.CardView-->
<!--                style="@style/card_view_style" >-->
                    <LinearLayout
                        style="@style/Linear_Layout_style_horizontal"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:background="@color/ray"
                        android:gravity="center"
                        >
                        <EditText
                            android:layout_height="wrap_content"
                            android:layout_width="match_parent"
                            android:id="@+id/ed_contact_number"
                            android:inputType="number"
                            android:drawablePadding="20dp"
                            android:drawableLeft="@drawable/ic_icons_phone"
                            android:hint="@string/tv_enter_number"
                            android:background="@color/ray"
                            android:focusedByDefault="true"
                            ></EditText>
                    </LinearLayout>
<!--            </androidx.cardview.widget.CardView>-->
<!--        </androidx.cardview.widget.CardView>-->

        <Button
            android:id="@+id/bt_next_screen"
            style="@style/next_button_style"
            android:layout_marginBottom="@dimen/screen_5_space_pin_code"
            android:text="@string/bt_proceed"/>
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/screen_5_space_pin_code"-->
<!--            android:gravity="center"-->
<!--            android:background="@drawable/round"-->
<!--            android:text="Please select a contact or enter mobile number to proceed.">-->

<!--        </TextView>-->
    </LinearLayout>
    <include layout="@layout/hwala_keyboard"></include>
</LinearLayout>
