<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@color/ray"
        android:orientation="vertical">
        <include layout="@layout/back"></include>
        <androidx.cardview.widget.CardView
            style="@style/card_view_style_back" >
            <androidx.cardview.widget.CardView
                style="@style/card_view_style" >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/ray"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.2"
                        android:textSize="@dimen/tv_text_size"
                        android:gravity="center"
                        android:textFontWeight="@android:integer/config_mediumAnimTime"
                        style="@style/AppTheme"
                        android:text="@string/screen_5_header"></TextView>
                    <LinearLayout
                        android:layout_height="0dp"
                        android:layout_weight="0.4"
                        style="@style/Linear_Layout_style_horizontal"
                        >
                        <EditText
                            android:id="@+id/ed_screen_5_pin_1"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:inputType="numberPassword"
                            android:background="@drawable/round"

                            android:layout_marginLeft="@dimen/screen_5_space_pin_code"
                            android:layout_marginRight="@dimen/screen_5_space_pin_code"
                            android:gravity="center"
                            android:maxLength="1"
                            ></EditText>
                        <EditText
                            android:id="@+id/ed_screen_5_pin_2"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:inputType="numberPassword"
                            android:background="@drawable/round"
                            android:maxLength="1"
                            android:gravity="center"
                            ></EditText>
                        <EditText
                            android:id="@+id/ed_screen_5_pin_3"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:inputType="numberPassword"
                            android:background="@drawable/round"
                            android:layout_marginLeft="@dimen/screen_5_space_pin_code"
                            android:maxLength="1"
                            android:gravity="center"
                            ></EditText>
                        <EditText
                            android:id="@+id/ed_screen_5_pin_4"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="match_parent"
                            android:inputType="numberPassword"
                            android:background="@drawable/round"
                            android:layout_marginLeft="@dimen/screen_5_space_pin_code"
                            android:layout_marginRight="@dimen/screen_5_space_pin_code"
                            android:maxLength="1"
                            android:gravity="center"
                            ></EditText>
                    </LinearLayout>
                    <LinearLayout
                        style="@style/Linear_Layout_style_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.3"
                        android:gravity="center">
                        <ImageView
                            android:id="@+id/bt_screen_5_resend"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/ic_icons_resend"></ImageView>
                        <Button
                            android:id="@+id/bt_resend_screen"
                            style="@style/normal_button_style"
                            android:layout_height="45dp"
                            android:text="@string/screen_5_resend"></Button>
                    </LinearLayout>
                    <Button
                        android:id="@+id/bt_next_screen"
                        style="@style/next_button_style"
                        android:text="@string/screen_5_make_transaction"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </androidx.cardview.widget.CardView>
           </LinearLayout>
    <include layout="@layout/hwala_keyboard"></include>

</LinearLayout>
